dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(src/Makefile.am)
dnl AC_CONFIG_AUX_DIR(config)
dnl AM_CONFIG_HEADER(config/config.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(MeqNodes, 0.1)

dnl Initialize for LOFAR (may set compilers)
lofar_INIT

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S
dnl AC_DISABLE_STATIC
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl dnl Replace `main' with a function in -lfl:
dnl AC_CHECK_LIB(fl, main)
dnl dnl Replace `main' with a function in -lcosev_r:
dnl AC_CHECK_LIB(cosev_r, main)
dnl dnl Replace `main' with a function in -lcosnm_r:
dnl AC_CHECK_LIB(cosnm_r, main)
dnl dnl Replace `main' with a function in -lorb_r:
dnl AC_CHECK_LIB(orb_r, main)
dnl dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl dnl Replace `main' with a function in -lvport_r:
dnl AC_CHECK_LIB(vport_r, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl
dnl Check for LOFAR specific things
dnl
lofar_GENERAL
lofar_AIPSPP(1)
lofar_BLITZ(1)
# lofar_FFTW2
lofar_PACKAGE(MEQ)
lofar_INTERNAL(CEP/BB/ParmDB,ParmDB,,0,ParmDB/ParmDB.h)
lofar_EXTERNAL(cfitsio,1,fitsio.h,,/usr /usr/local /aips++/cfitsio)
lofar_EXTERNAL(fftw3,1,fftw3.h,,)
lofar_EXTERNAL(gdbm,0,gdbm.h,,)
lofar_EXTERNAL(qdbm,0,hovel.h,,/usr /usr/local /usr/include/qdbm)

dnl
dnl Check for old LSQFit
dnl
AC_MSG_CHECKING([if old interface to casa::LSQFit should be used])
AC_LANG(C++)
AC_COMPILE_IFELSE(    
  AC_LANG_PROGRAM(
    [[#include <scimath/Fitting/LSQaips.h>]],
    [[
      casa::LSQaips solver;
      solver.isReady();
    ]]),
  ac_old_lsqfit=no,
  ac_old_lsqfit=yes
)
AC_MSG_RESULT($ac_old_lsqfit)
if test $ac_old_lsqfit = yes; then
  AC_DEFINE_UNQUOTED(USE_OLD_LSQFIT,${ac_old_lsqfit},[use the old interface to casa::LSQFit])
fi


dnl
dnl Output Makefiles
dnl
AC_OUTPUT(
src/Makefile
test/Makefile 
Makefile
)
